animation fix on mobile

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
   padding: 0;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   display: flex;
   flex-direction: column;
